src/test/ui/command-line-diagnostics.nll.stderr
error[E0384]: cannot assign twice to immutable variable `x`
  --> $DIR/command-line-diagnostics.rs:16:5
   |
LL |     let x = 42;
   |         -   -- first assignment to `x`
   |         |
   |         consider changing this to `mut x`
LL |     x = 43;
   |     ^^^^^^ cannot assign twice to immutable variable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0384`.
